--- a/index.css
+++ b/index.css
@@ -1,24 +1,37 @@
-.nav {
+*{
+  box-sizing: border-box;
+}
+
+
+nav {
+    width: 100%;
+    overflow: auto;
+  }
+nav ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
     overflow: hidden;
     background-color: #333;
-  }
-  
-.nav li {
+} 
+nav li {
     float: left;
   }
   
-.nav li a {
+nav a {
+    width: 120px;
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20px 10px;
     text-decoration: none;
+    font-size: 17px;
   }
   
-.nav li a:hover:not(.active) {
+nav a:hover:not(.active) {
    background-color: #111;
   }
   
@@ -42,9 +55,12 @@ img#volley{
     padding: 1em;
   
 }
-
 .body{
     margin: 3em;
+}
+body{
+    
+    background-color: rgb(204, 198, 198);
 }
 
 h2#heading{
@@ -68,3 +84,14 @@ p{
   
   font-size: 16px;
 }
+.imgright{
+  float: right;
+  
+  margin: 0px 3px 0px 15px ;
+}
+
+.imgleft{
+  margin-right:10px;
+  margin-left: 5px;
+}
+
